<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
tools:context=".SecondActivity"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:layout_marginBottom="25dp"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/checkbox"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/baseline_check_box_outline_blank_24" />

        <TextView
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="11sp"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="11sp"
            android:layout_marginStart="125dp"
            android:textColor="#525BFF" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="15dp"
        android:background="@drawable/register_button"
        android:textAllCaps="false"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_member" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="#525BFF"
            android:layout_marginStart="5dp"/>
    </LinearLayout>


</LinearLayout>

</LinearLayout>