<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"/>
        
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/username"
            android:layout_marginBottom="25dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:layout_marginBottom="25dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/phone"
            android:layout_marginBottom="25dp"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:layout_marginBottom="25dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/checkbox"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/baseline_check_box_outline_blank_24" />

            <TextView
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_checking_the_box_you_agree_to_our"
                android:textSize="11sp"
                android:layout_marginStart="4dp" />

            <TextView
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                android:textColor="#525BFF" />

            <TextView
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="11sp"
                android:layout_marginStart="2dp" />

            <TextView
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                android:textColor="#525BFF" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="15dp"
            android:background="@drawable/register_button"
            android:textAllCaps="false"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Already Have an Account? " />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Log In"
                android:textColor="#525BFF"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>